# combinator

./: Assert.h  CMakeLists.txt  Combinator.cpp  Combinator.h  Converter.h  ElementType.h  FixedRequest.h  Position.h  README.md  main.cpp  tests.cpp
Combination/: ArrayCombination.h  CombinationWrapper.h  StdArrayCombination.h  StdArrayPCombination.h  VectorCombination.h  VectorListCombination.h  VectorPCombination.h
Combination/ElementFetcher/: ElementAddressFetcher.h  ElementCopyFetcher.h  ElementFetcher.h  ElementReferenceFetcher.h
Combinator/: Cartesian.h  Combinator.h  FixedSizeCombinator.h  FixedSizedSingleSetCombinator.h  MultiPermutator.h  Permutator.h  VariadicCartesian.h
Iterator/: BackwardsIterator.h  DereferencedIterator.h  ForwardIterator.h  IndexedIterator.h  Iterator.h  PositionedIterator.h  RandomAccessIterator.h  ShuffleIterator.h  SizedIterator.h  UniqueElementsIterator.h
Iterator/Compose/: ComposeFIterator.h  ComposeIterator.h  ComposeRAIterator.h
Iterator/List/: BackwardsListIterator.h  ForwardListIterator.h  ListIterator.h  RandomAccessListIterator.h  UniqueElementsIterator.h
Iterator/Movement/: BackwardsIterator.h  ForwardIterator.h  MobileIteratorMacros.h  PositionedIterator.h  RandomAccessIterator.h
Iterator/MultiChoiceIterator/: MultiChoiceFIterator.h  MultiChoiceRAIterator.h
Iterator/Multiset/: MultisetFIterator.h  MultisetIterator.h  MultisetRAIterator.h
Iterator/OrderIterator/: CandidateOrderIterator.h  (+5 more)
Request/: ComposeRequest.h  FixedRequest.h  FixedSizeRequest.h  MultisetRequest.h  Request.h  VariadicMultisetRequest.h
(+24 files in other folders)
